# GestoreFile

./: Assieme.cpp  Assieme.h  CMakeLists.txt  Disegno.cpp  Disegno.h  Gcode.cpp  Gcode.h  Particolare.cpp  Particolare.h  main.cpp
